config-root/namespaces/jx-production/projet-cd/projet-cd-projet-cd-deploy.yaml
# Source: projet-cd/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projet-cd-projet-cd
  labels:
    draft: draft-app
    chart: "projet-cd-0.0.7"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'projet-cd'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: projet-cd-projet-cd
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: projet-cd-projet-cd
    spec:
      serviceAccountName: projet-cd-projet-cd
      containers:
      - name: projet-cd
        image: "ghcr.io/hazem-internship/projet-cd:0.0.7"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
      - name: "tekton-container-registry-auth"
